--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
                                     </svg>
                                 </span>
                                 <h4>Email</h4>
-                                <p>alexa@ganil.com</p>
+                                <p>alexa@gmail.com</p>
                             </div>
                             <div class="contact-item">
                                 <span class="mt-4">
@@ -853,7 +853,7 @@
                     </div>
                 </div>
                 <div class="col-12 text-center mt-5">
-                    <span>Created By <a class="ib" href="https://www.facebook.com/ibrahimkhalil12497" target="_blank">Ibrahim Khalil</a> |  2020 All rights reserved.</span>
+                    <span>Created By <a class="ib" href="https://www.facebook.com/ibrahimkhalil12497" target="_blank">Ibrahim Khalil</a> |  2021 All rights reserved.</span>
                 </div>
             </div>
         </div>
